[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histdatacom"
dynamic = ["version"]
description = "A command-line utility and Python ETL package that downloads currency exchange rates from Histdata.com. Optional Temporal sidecar, InfluxDB, and Jupyter integrations are available through extras."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10.0"
license = "MIT"
authors = [
    { name = "David Midlo", email = "dmidlo@gmail.com" },
]
keywords = [
    "finance",
    "data",
    "datascience",
    "HistData.com",
    "scraper",
    "influxdb",
    "currency exchange",
    "forex",
    "fx",
    "etl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Environment :: MacOS X",
    "Operating System :: MacOS",
    "Environment :: Win32 (MS Windows)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Jupyter",
    "Topic :: Terminals",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "certifi>=2024.2.2",
    "polars>=1.0",
    "pytz>=2024.1",
    "PyYAML>=6.0",
    "requests>=2.28",
    "rich>=12.0",
]

[project.optional-dependencies]
arrow = [
    "pyarrow>=16.0",
]
influx = [
    "influxdb-client>=1.36",
]
pandas = [
    "pandas>=2.0",
]
jupyter = [
    "jupyter",
    "ipywidgets",
]
temporal = [
    "temporalio>=1.10,<2",
]
all = [
    "influxdb-client>=1.36",
    "ipywidgets",
    "jupyter",
    "pandas>=2.0",
    "pyarrow>=16.0",
    "temporalio>=1.10,<2",
]
test = [
    "coverage==7.14.2",
    "influxdb-client>=1.36",
    "pandas>=2.0",
    "pyarrow>=16.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
]
lint = [
    "black==26.5.1",
    "commitizen==4.16.3",
    "mypy==2.1.0",
    "pandas-stubs==3.0.3.260530",
    "pre-commit==4.6.0",
    "pyroma==5.0.1",
    "ruff==0.15.18",
    "shellcheck-py==0.11.0.1",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-PyYAML==6.0.12.20260518",
]
release = [
    "build==1.5.0",
    "keyring==25.7.0",
    "setuptools==80.10.2",
    "twine==6.2.0",
    "wheel==0.47.0",
]
dev = [
    "build==1.5.0",
    "black==26.5.1",
    "commitizen==4.16.3",
    "coverage==7.14.2",
    "influxdb-client>=1.36",
    "ipywidgets",
    "jupyter",
    "keyring==25.7.0",
    "mypy==2.1.0",
    "pandas>=2.0",
    "pandas-stubs==3.0.3.260530",
    "pre-commit==4.6.0",
    "pyroma==5.0.1",
    "pyarrow>=16.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.18",
    "setuptools==80.10.2",
    "shellcheck-py==0.11.0.1",
    "temporalio>=1.10,<2",
    "twine==6.2.0",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-PyYAML==6.0.12.20260518",
    "wheel==0.47.0",
]

[project.urls]
Homepage = "https://github.com/dmidlo/histdata.com-tools"
"Bug Tracker" = "https://github.com/dmidlo/histdata.com-tools/issues"

[project.scripts]
histdatacom = "histdatacom.histdata_com:main"
histdatacom-sidecar = "histdatacom.sidecar.cli:main"
histdatacom-sidecar-worker = "histdatacom.sidecar.worker:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"histdatacom.sidecar" = [
    "assets/README.md",
    "assets/manifest.json",
    "assets/runtime-defaults.json",
    "assets/bin/*/*",
]

[tool.setuptools.dynamic]
version = { attr = "histdatacom.__version__" }
