[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histdatacom"
dynamic = ["version"]
description = "A command-line utility and Python ETL package that downloads currency exchange rates from Histdata.com with a default Temporal orchestration runtime and optional InfluxDB/Jupyter integrations."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10.0"
license = "MIT"
authors = [
    { name = "David Midlo", email = "dmidlo@gmail.com" },
]
keywords = [
    "finance",
    "data",
    "datascience",
    "HistData.com",
    "scraper",
    "influxdb",
    "currency exchange",
    "forex",
    "fx",
    "etl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Environment :: MacOS X",
    "Operating System :: MacOS",
    "Environment :: Win32 (MS Windows)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Jupyter",
    "Topic :: Terminals",
]
dependencies = [
    "certifi>=2026.6.17",
    "polars>=1.41.2",
    "pytz>=2026.2",
    "PyYAML>=6.0.3",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "Rx>=3.2",
    "temporalio>=1.10,<2",
]

[project.optional-dependencies]
arrow = [
    "pyarrow>=24.0.0",
]
influx = [
    "influxdb-client>=1.50.0",
]
pandas = [
    "pandas>=2.3.3",
]
jupyter = [
    "jupyter",
    "ipywidgets",
]
temporal = [
    "temporalio>=1.10,<2",
]
all = [
    "influxdb-client>=1.50.0",
    "ipywidgets",
    "jupyter",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "temporalio>=1.10,<2",
]
test = [
    "coverage==7.14.3",
    "ipykernel",
    "influxdb-client>=1.50.0",
    "nbclient",
    "nbformat",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "temporalio>=1.10,<2",
]
lint = [
    "black==26.5.1",
    "commitizen==4.16.4",
    "mypy==2.1.0",
    "pandas-stubs==3.0.3.260530",
    "pre-commit==4.6.0",
    "pyroma==5.0.1",
    "ruff==0.15.19",
    "shellcheck-py==0.11.0.1",
    "types-PyYAML==6.0.12.20260518",
]
release = [
    "build==1.5.0",
    "keyring==25.7.0",
    "setuptools==82.0.1",
    "twine==6.2.0",
    "wheel==0.47.0",
]
dev = [
    "build==1.5.0",
    "black==26.5.1",
    "commitizen==4.16.4",
    "coverage==7.14.3",
    "ipykernel",
    "influxdb-client>=1.50.0",
    "ipywidgets",
    "jupyter",
    "keyring==25.7.0",
    "mypy==2.1.0",
    "nbclient",
    "nbformat",
    "pandas>=2.3.3",
    "pandas-stubs==3.0.3.260530",
    "pre-commit==4.6.0",
    "pyroma==5.0.1",
    "pyarrow>=24.0.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.19",
    "setuptools==82.0.1",
    "shellcheck-py==0.11.0.1",
    "temporalio>=1.10,<2",
    "twine==6.2.0",
    "types-PyYAML==6.0.12.20260518",
    "wheel==0.47.0",
]

[project.urls]
Homepage = "https://github.com/dmidlo/histdata.com-tools"
"Bug Tracker" = "https://github.com/dmidlo/histdata.com-tools/issues"

[project.scripts]
histdatacom = "histdatacom.histdata_com:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"histdatacom.orchestration" = [
    "assets/README.md",
    "assets/*.json",
    "assets/bin/*/*",
    "assets/third-party/*/*",
]

[tool.setuptools.dynamic]
version = { attr = "histdatacom.__version__" }
